@@ -49,6 +49,7 @@
     <Compile Include="Mono.Linker.Steps\LoadReferencesStep.cs" />
     <Compile Include="Mono.Linker.Steps\MarkStep.cs" />
     <Compile Include="Mono.Linker.Steps\OutputStep.cs" />
+    <Compile Include="Mono.Linker.Steps\ResolveFromApiInfoStep.cs" />
     <Compile Include="Mono.Linker.Steps\ResolveFromAssemblyStep.cs" />
     <Compile Include="Mono.Linker.Steps\ResolveFromXmlStep.cs" />
     <Compile Include="Mono.Linker.Steps\ResolveStep.cs" />
