@@ -1,3 +1,9 @@
+2007-06-12  Jb Evain  <jbevain@novell.com>
+
+	* Mono.Linker.Steps/ResolveFromApiInfoStep.cs:
+	  Mono.Linker/Driver.cs:
+		Started working on linking from api-info.
+
 2007-06-08  Jb Evain  <jbevain@novell.com>
 
 	* Descriptors/System.Drawing.xml,
